--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comfy House</title>
+    <link href="/favicon.ico" type="image/x-icon" rel="icon" />
     <!--font awesome-->
     <script src="https://kit.fontawesome.com/cf6f5a8d86.js" crossorigin="anonymous"></script>
     <!--custom css-->
@@ -40,26 +41,13 @@
     </header>
     <!--end of hero-->
     <!--products-->
-    <!--end of products-->
     <section class="products">
         <div class="section-title">
             <h2>our products</h2>
         </div>
         <div class="products-center">
-            <!--single product-->
-            <article class="product">
-                <div class="image-container">
-                    <img src="./images/product-1.jpeg" alt="product" class="product-img">
-                    <button class="bag-btn" data-id="1">
-                        <i class="fas fa-shopping-cart"></i>
-                        add to bag
-                    </button>
-                </div>
-                <h3>queen bed</h3>
-                <h4>$66</h4>
-            </article>
-            <!--end ofsingle product-->
         </div>
+    </section>
         <!--end of the products-->
         <!--cart-->
         <div class="cart-overlay">
@@ -68,21 +56,10 @@
                     <i class="fas fa-window-close"></i>
                 </span>
                 <h2>your cart</h2>
-                <div class="cart content">
+                <div class="cart-content">
                     <!--cart item-->
-                    <div class="cart-item">
-                        <img src="./images/product-1.jpeg" alt="product">
-                        <div>
-                            <h4>queen bed</h4>
-                            <h5>$9.00</h5>
-                            <span class="remove-item">remove</span>
-                            <div>
-                                <i class="fas fa-chevron-up"></i>
-                                <p class="item-amount">1</p>
-                                <i class="fas fa-chevron-down"></i>
-                            </div>
-                        </div>
-                    </div>
+                    <!--<div class="cart-item">
+                    </div>-->
                     <!--end cart item-->
                 </div>
                 <div class="cart-footer">
@@ -92,9 +69,8 @@
             </div>
         </div>
         <!--end of cart-->
-    </section>
     <!--scripts-->
-    <script script="app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
