deleted-a-few-Items-&&-Its-Done

--- a/index.html
+++ b/index.html
@@ -64,12 +64,15 @@
                 </div>
                 <div class="cart-footer">
                     <h3>your total : $ <span class="cart-total">0</span></h3>
-                    <button class="cleart-cart banner-btn">clear cart</button-clear-cart>
+                    <button class="clear-cart banner-btn">clear cart</button>
                 </div>
             </div>
         </div>
         <!--end of cart-->
     <!--scripts-->
+    <!--contentful script-->
+    <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
+    <!--app js-->
     <script src="app.js"></script>
 </body>
 
